feat: add dramatiq tasks

--- a/api_service/requirements.txt
+++ b/api_service/requirements.txt
@@ -1,8 +1,12 @@
 fastapi==0.115.3
 uvicorn==0.32.0
-pydantic==2.9.2
+pydantic==2.10.5
 SQLAlchemy==2.0.36
 psycopg2-binary==2.9.10
 passlib==1.7.4
 pyjwt==2.10.1
 bcrypt==4.2.1
+requests==2.32.3
+dramatiq==1.17.1
+redis==5.2.1
+apscheduler==3.11.0
